src/objects/Roll_Vote__c.object
<CustomObject>
    <fields>
        <fullName>Date_Voted__c</fullName>
        <description>Date/Time at which vote was taken.</description>
        <inlineHelpText>Date/Time at which vote was taken.</inlineHelpText>
        <label>Date Voted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Vote__c</fullName>
        <label>Date of Vote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Vote__c</fullName>
        <description>How we want legislators to vote.</description>
        <inlineHelpText>How we want legislators to vote.</inlineHelpText>
        <label>Desired Vote</label>
        <picklist>
            <picklistValues>
                <fullName>Yea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legislation__c</fullName>
        <label>Legislation</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Roll Votes</relationshipLabel>
        <relationshipName>Roll_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Num_Nay_Votes__c</fullName>
        <description>Pulls the number of Yea votes from related Legislator Vote records</description>
        <inlineHelpText>Number of Yea votes from related Legislator Vote records</inlineHelpText>
        <label>Num Nay Votes</label>
        <summaryFilterItems>
            <field>Legislator_Vote__c.Vote__c</field>
            <operation>equals</operation>
            <value>Nay</value>
        </summaryFilterItems>
        <summaryForeignKey>Legislator_Vote__c.Roll_Vote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Yea_Votes__c</fullName>
        <description>Pulls the number of Yea votes from related Legislator Vote records</description>
        <inlineHelpText>Number of Yea votes from related Legislator Vote records</inlineHelpText>
        <label>Num Yea Votes</label>
        <summaryFilterItems>
            <field>Legislator_Vote__c.Vote__c</field>
            <operation>equals</operation>
            <value>Yea</value>
        </summaryFilterItems>
        <summaryForeignKey>Legislator_Vote__c.Roll_Vote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Id__c</fullName>
        <externalId>true</externalId>
        <label>Roll Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Roll_Type__c</fullName>
        <label>Roll Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_This_Vote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this vote will count towards IAVA&apos;s scoring system for legislators.</description>
        <inlineHelpText>If checked, this vote will count towards IAVA&apos;s scoring system for legislators.</inlineHelpText>
        <label>Score This Vote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vote_Type__c</fullName>
        <description>passage, cloture, leadership, nomination, quorum, other</description>
        <inlineHelpText>passage, cloture, leadership, nomination, quorum, other</inlineHelpText>
        <label>Vote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Roll Vote</label>
    <nameField>
        <label>Roll Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roll Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>